<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.olehmesh.repository.models.InstCellModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_logo"
            setLogo="@{String.valueOf(model.logo)}"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:civ_border_color="@color/color_border_civ"
            app:civ_border_width="1dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/guideline_top"
            app:layout_constraintEnd_toStartOf="@+id/img_more"
            app:layout_constraintStart_toEndOf="@+id/img_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login_name"
                android:textColor="@color/color_login_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(model.login)}"
                tools:text="@string/login" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/location_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(model.location)}"
                    tools:text="@string/location" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="6dp"
                    app:srcCompat="@drawable/ic_arrow_forward" />
            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_more_horiz"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="50dp" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:divider="@android:color/black"
            android:dividerHeight="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_top" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="135dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_favorite_cell"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_bottom" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_comment"
            app:layout_constraintBottom_toBottomOf="@+id/imgFavorite"
            app:layout_constraintStart_toEndOf="@+id/imgFavorite"
            app:layout_constraintTop_toTopOf="@+id/imgFavorite" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_send"
            app:layout_constraintBottom_toBottomOf="@+id/imgComment"
            app:layout_constraintStart_toEndOf="@+id/imgComment"
            app:layout_constraintTop_toTopOf="@+id/imgComment" />

        <com.rd.PageIndicatorView
            android:id="@+id/page_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:piv_radius="3.5dp"
            app:piv_selectedColor="#1B36CA"
            app:piv_unselectedColor="#B4B8B8"
            app:piv_viewPager="@id/view_pager_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_bottom"
            app:piv_orientation="horizontal" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_bookmark"
            app:layout_constraintBottom_toBottomOf="@+id/imgComment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgComment" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLikes"
            setLikesList="@{model.likes}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgFavorite" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHashTags"
            setHashTagsList='@{model.hashTags}'
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="12dp"
            android:maxLines="2"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusableInTouchMode="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLikes" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLastVisit"
            android:text='@{String.valueOf(model.lastVisit)}'
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12.5sp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHashTags" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>